CB-28123: Enable secure boot for GCP instances with CDP_CB_GCP_SECURE_BOOT entitlement